# az-scout-plugin-bdd-sku

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
api/: Dockerfile  main.py  requirements.txt
infra/: container-apps.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ingestion/: README.md
ingestion/app/collectors/: azure_pricing_collector.py  azure_spot_collector.py
ingestion/app/core/: orchestrator.py
ingestion/app/shared/: config.py
openapi/: v1.yaml
sku-mapper-job/: Dockerfile  README.md  pyproject.toml
sku-mapper-job/deploy/: container-app-job.yaml  cronjob.yaml
sku-mapper-job/src/sku_mapper_job/: __main__.py  config.py  db.py  main.py  mapping.py  parser.py  sql.py
sku-mapper-job/tests/: test_main.py  test_mapping.py  test_parser.py
sql/: schema.sql
src/az_scout_bdd_sku/: __init__.py  api_client.py  db.py  db_api.py  pagination.py  plugin_config.py  plugin_routes.py  routes.py  tools.py  validation.py
src/az_scout_bdd_sku/static/css/: bdd-sku.css
src/az_scout_bdd_sku/static/html/: bdd-sku-offcanvas.html  bdd-sku-tab.html
src/az_scout_bdd_sku/static/js/: bdd-sku-offcanvas.js  bdd-sku-tab.js
src/az_scout_plugin_bdd_sku/service/: retail_pricing.py  spot_data.py
tests/: conftest.py  test_api_v1.py  test_bdd_sku.py  test_openapi_exists.py  test_pagination.py
